--- a/package.json
+++ b/package.json
@@ -1,50 +1,35 @@
 {
   "name": "ngx-advanced-carousel",
-  "version": "0.3.7",
-  "main": "dist/ngx-advanced-carousel.d.ts",
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e"
-  },
-  "private": true,
-  "dependencies": {
-    "@angular/animations": "^15.2.9",
+  "version": "0.3.8",
+  "peerDependencies": {
     "@angular/common": "^15.2.9",
-    "@angular/compiler": "^15.2.9",
     "@angular/core": "^15.2.9",
-    "@angular/forms": "^15.2.9",
-    "@angular/platform-browser": "^15.2.9",
-    "@angular/platform-browser-dynamic": "^15.2.9",
-    "@angular/router": "^15.2.9",
-    "@juggle/resize-observer": "^3.4.0",
-    "rxjs": "~6.6.7",
-    "tslib": "^2.0.0",
-    "zone.js": "~0.11.4"
+    "@juggle/resize-observer": "^3.4.0"
   },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "^15.2.9",
-    "@angular/cli": "^15.2.9",
-    "@angular/compiler-cli": "^15.2.9",
-    "@angular/language-service": "^15.2.9",
-    "@types/jasmine": "~3.3.8",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
-    "hammerjs": "^2.0.8",
-    "jasmine-core": "~3.8.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~6.4.2",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.7.0",
-    "ng-packagr": "^15.2.2",
-    "protractor": "~7.0.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~6.1.0",
-    "typescript": "~4.9.5"
+  "dependencies": {
+    "tslib": "^2.0.0"
+  },
+  "module": "fesm2015/ngx-advanced-carousel.mjs",
+  "es2020": "fesm2020/ngx-advanced-carousel.mjs",
+  "esm2020": "esm2020/ngx-advanced-carousel.mjs",
+  "fesm2020": "fesm2020/ngx-advanced-carousel.mjs",
+  "fesm2015": "fesm2015/ngx-advanced-carousel.mjs",
+  "typings": "index.d.ts",
+  "exports": {
+    "./package.json": {
+      "default": "./package.json"
+    },
+    ".": {
+      "types": "./index.d.ts",
+      "esm2020": "./esm2020/ngx-advanced-carousel.mjs",
+      "es2020": "./fesm2020/ngx-advanced-carousel.mjs",
+      "es2015": "./fesm2015/ngx-advanced-carousel.mjs",
+      "node": "./fesm2015/ngx-advanced-carousel.mjs",
+      "default": "./fesm2020/ngx-advanced-carousel.mjs"
+    }
+  },
+  "sideEffects": false,
+  "scripts": {
+    "prepublishOnly": "node --eval \"console.error('ERROR: Trying to publish a package that has been compiled by Ivy in full compilation mode. This is not allowed.\\nPlease delete and rebuild the package with Ivy partial compilation mode, before attempting to publish.\\n')\" && exit 1"
   }
 }
